# fastcom-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-publish.yml
src/fastcom/: __main__.py  test.py  timer.py
src/fastcom-cli/: __main__.py
