[metadata]
name = fastcom-cli
author = Tina
description = Unofficial CLI for fast.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tina-otoge/fastcom-cli



[options]
packages = find:
package_dir = = src
install_requires =
	requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	fastcom-cli = src.fastcom:main
